--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
   </style>
 </head>
 <body>
-  <h2>Sample Syllabus Query Page</h2>
+  <h2>EBO and Essay Queries Here</h2>
   <form id="queryForm">
     <textarea name="query" id="query" rows="5" cols="60" placeholder="Type your question here..."></textarea><br />
     <button type="submit">Submit</button>
   </form>
   <h3>Response:</h3>
+  <h5> all queries and responses anonymously recorded by qualitrics</h5>
   <pre id="response"></pre>
 
   <script>
