--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   </style>
 </head>
 <body>
-  <h2>EBO and Essay Queries Here</h2>
+  <h2>EBO (Essay Bibliography and Outline) Essay Queries Here - only questions about the essay and the EBO</h2>
 
   <form id="queryForm">
     <textarea name="query" id="query" rows="5" cols="60" placeholder="Type your question here..."></textarea><br />
